# food-products-api

./: .flake8  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: continuous-integration.yaml
src/food_products_api/: __init__.py  app.py  cache.py  serializer.py  web.py  worker.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
tests/: test_app.py  test_food_products_api.py  test_serializer.py  test_web.py  test_worker.py
