[tool.poetry]
name = "food-products-api"
version = "0.1.0"
description = "Read and write information about different food products, powered by Open Food Facts."
authors = ["Thomas Leese <thomas@leese.io>"]

[tool.poetry.dependencies]
fastapi = "^0.65"
gunicorn = "^20.1"
python = "^3.9"
redis = "^3.5"
requests = "^2.25"
uvicorn = "^0.14"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9"
flake8-bugbear = "^21.4"
pytest = "^6.2"
pytest-cov = "^2.12"
responses = "^0.13"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
