[tool.poetry]
name = "food-products-api"
version = "0.1.0"
description = "Reference information about different food products, powered by Open Food Facts."
authors = ["Thomas Leese <thomas@leese.io>"]

[tool.poetry.dependencies]
celery = "^5.1"
fastapi = "^0.68"
gunicorn = "^20.1"
python = "^3.11"
redis = "^3.5"
requests = "^2.26"
sentry-sdk = "^1.4"
uvicorn = "^0.15"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^3.9"
flake8-bugbear = "^21.9"
pytest = "^6.2"
pytest-cov = "^2.12"
pytest-env = "^0.6"
responses = "^0.14"

[tool.pytest.ini_options]
env = [
    "REDIS_URL = redis://localhost",
    "BEARER_TOKENS = test1,test2"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
