[tool.poetry]
name = "food-products-api"
version = "0.1.0"
description = "Reference information about different food products, powered by Open Food Facts."
authors = ["Thomas Leese <thomas@leese.io>"]

[tool.poetry.dependencies]
fastapi = "^0.109"
gunicorn = "^20.1"
python = "^3.11"
redis = "^4.3"
requests = "^2.28"
sentry-sdk = "^1.10"
uvicorn = "^0.20"

[tool.poetry.dev-dependencies]
black = "^22.10"
flake8 = "^6.0"
flake8-bugbear = "^22.10"
httpx = "^0.23"
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-env = "^0.8"
responses = "^0.22"

[tool.pytest.ini_options]
env = [
    "REDIS_URL = redis://localhost",
    "BEARER_TOKENS = test1,test2"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
